[package]
name = "ofCourse"
version = "1.1.1"
authors = ["Eliaz Bobadilla <eliaz.bobadilladev@gmail.com>"]
license = "MIT"
description = "Output a string repeatedly until killed."
readme = "readme.md"
homepage = "https://github.com/UltiRequiem/ofCourse"
repository = "https://github.com/UltiRequiem/ofCourse"
keywords = ["cli", "yes"]
categories = ["command-line-utilities"]
edition = "2018"
